--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,8 @@
-body { padding-top:30px; }
-.login-button{
-  width:200px;
+body {
+  padding-top: 30px;
+}
+
+.login-button {
+  width: 200px;
   margin-top: 20px;
 }
